--- a/Config/.config/picom/picom.conf
+++ b/Config/.config/picom/picom.conf
@@ -1,143 +1,96 @@
-#################################
-#             Shadows           #
-#################################
+# vim: foldmethod=marker
 
-corner-radius = 10;
-round-borders = 10;
-
-# Enabled client-side shadows on windows. Note desktop windows
-# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
-# unless explicitly requested using the wintypes option.
-#
-# shadow = false
-shadow = true;
-
-# The blur radius for shadows, in pixels. (defaults to 12)
-# shadow-radius = 12
-shadow-radius = 8;
-
-# The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
-
-# The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
-shadow-offset-x = -6;
-
-# The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
-shadow-offset-y = -6;
-
-# Specify a list of conditions of windows that should have no shadow.
-#
-# examples:
-#   shadow-exclude = "n:e:Notification";
-#
-# shadow-exclude = []
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
-
-
-#################################
-#   Transparency / Opacity      #
-#################################
-
-
-# Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.9;
-
-# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.9;
-
-# Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-# inactive-opacity-override = true
-inactive-opacity-override = false;
-
-#################################
-#       General Settings        #
-#################################
-
-# Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
-# daemon = false
-
-# Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
-# `xrender` is the default one.
-#
-backend = "glx"
-# backend = "xrender";
-
-# Enable/disable VSync.
-# vsync = false
+backend = "glx";
 vsync = true;
+use-damage = true
+#unredir-if-possible = false;
+glx-no-stencil = false;
+# glx-no-rebind-pixmap = true;
 
-# Try to detect WM windows (a non-override-redirect window with no
-# child that has 'WM_STATE') and mark them as active.
-#
-# mark-wmwin-focused = false
-mark-wmwin-focused = true;
+# Fading {{{
+fading = true;
+fade-in-step = 0.09;
+fade-out-step = 0.08;
+fade-delta = 10;
+no-fading-openclose = false;
+# }}}
 
-# Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
-mark-ovredir-focused = true;
+# Wintypes {{{
+wintypes:
+{
+  tooltip = { shadow = false; };
+};
+# }}}
 
-# Try to detect windows with rounded corners and don't consider them
-# shaped windows. The accuracy is not very high, unfortunately.
-#
-# detect-rounded-corners = false
-detect-rounded-corners = true;
+# Shadows {{{
+shadow = true;
+shadow-radius = 15;
+shadow-offset-x = -15;
+shadow-offset-y = -15;
+shadow-opacity = 0.75;
 
-# Detect '_NET_WM_OPACITY' on client windows, useful for window managers
-# not passing '_NET_WM_OPACITY' of client windows to frame windows.
-#
-# detect-client-opacity = false
-detect-client-opacity = true;
+shadow-exclude = [
+  "bounding_shaped && !rounded_corners",
+  "window_type = 'desktop'",
+  "window_type = 'utility'",
+  "class_g *?= 'polybar'",
+  "window_type = 'splash'",
+  "window_type = 'tooltip'",
+  "window_type *= 'menu'",
+  "window_type != 'dock' && BSPWM_TILED@:c = 1",
+  "class_g *?= 'activate-linux'",
+]
+# }}}
 
-# Specify refresh rate of the screen. If not specified or 0, picom will
-# try detecting this with X RandR extension.
-#
-# refresh-rate = 60
-refresh-rate = 0;
-
-# Use 'WM_TRANSIENT_FOR' to group windows, and consider windows
-# in the same group focused at the same time.
-#
-# detect-transient = false
-detect-transient = true;
-
-# Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
-# group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if
-# detect-transient is enabled, too.
-#
-# detect-client-leader = false
-detect-client-leader = true;
-
-# GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer.
-# Might cause incorrect opacity when rendering transparent content (but never
-# practically happened) and may not work with blur-background.
-# My tests show a 15% performance boost. Recommended.
-#
-glx-no-stencil = false
-
-# Disable the use of damage information.
-# This cause the whole screen to be redrawn everytime, instead of the part of the screen
-# has actually changed. Potentially degrades the performance, but might fix some artifacts.
-# The opposing option is use-damage
-#
-# no-use-damage = false
-use-damage = true;
-
-blur: {
-	method = "dual_kawase";
-	strength = 9;
+# Blur {{{
+blur:
+{
+  method = "dual_kawase";
+  strength = 5;
 }
 
-shadow-exclude = [
-	"_GTK_FRAME_EXTENTS@:c",
-	"class_g = 'Polybar'",
+blur-background = true;
+blur-background-frame = true;
+blur-background-fixed = true;
+
+blur-background-exclude = [
+  "window_type = 'desktop'",
+  "window_type *= 'menu'",
+  "window_type = 'utility'",
+  "window_type = 'tooltip'",
+  "window_type = 'splash'",
+  "class_g *?= 'screenkey'",
+  "class_g *?= 'GLava'",
+  "class_g *?= 'kdeconnectd'",
+  "class_g *?= 'kdeconnect.daemon'",
+  "class_g *?= 'activate-linux'",
+  "_GTK_FRAME_EXTENTS@:c"
 ];
+# }}}
+
+# Opacity {{{
+frame-opacity = 0.7;
+inactive-dim = 0.2;
+
+opacity-rule = [ 
+  "95:class_g *?= 'chatterino'",
+  "95:class_g *?= 'dunst'"
+];
+# }}}
+
+# Rounded corners {{{
+corner-radius = 10.0;
+
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'utility'",
+  "window_type = 'tooltip'",
+  "window_type = 'splash'",
+  "class_g *?= 'dunst'",
+  "BSPWM_TILED@:c = 1",
+  "_NET_WM_STATE@[*]:32a = '_NET_WM_STATE_FULLSCREEN'",
+];
+# }}}
