--- a/Config/.config/polybar/config.ini
+++ b/Config/.config/polybar/config.ini
@@ -1,11 +1,11 @@
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
+background = #242933
+background-alt = #292e39
+foreground = #88c0d0
+primary = #81858c
+secondary = #96999f
 alert = #A54242
-disabled = #707880
+disabled = #96999f
 
 [bar/example]
 monitor = ${env:MONITOR:}
